--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,31 @@
         android:name=".DinnerPlannerApplication"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ExampleActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".HomeActivity">
+
+        </activity>
+        <activity android:name=".IngredientsActivity">
+
+        </activity>
+        <activity android:name=".InstructionsActivity">
+
+        </activity>
+        <activity
+            android:name=".ItemPriceDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+            >
+
+        </activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
