--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:name=".DinnerPlannerApplication"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ExampleActivity"
+            android:name=".HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,13 +17,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity">
 
-        </activity>
         <activity android:name=".IngredientsActivity">
 
         </activity>
-        <activity android:name=".InstructionsActivity">
+        <activity android:name=".Instructions1Activity">
+
+        </activity>
+        <activity android:name=".Instructions2Activity">
 
         </activity>
         <activity
